<resources>
    <string name="app_name">College Study Buddy</string>
    <string name="buttonUniversal_ToSettings">Settings</string>
    <string name="buttonUniversal_ToSchedule">Schedule</string>
    <string name="buttonUniversal_ToAssignments">Assignments</string>
    <string name="buttonAssignmentAdd_SaveQuit">Return To Assignments</string>
    <string name="textAssignments_Title">Main Menu</string>
    <string name="textAssignments_Sort">Sort By...</string>
    <string name="radioAssignments_SortClass">Class</string>
    <string name="radioAssignments_SortDue">Due</string>
    <string name="buttonAssignments_Add">Add Entry</string>
    <string name="buttonScheduleEdit_SaveQuit">Return to Schedule</string>
    <string name="buttonScheduleView_ToScheduleEdit">Add Classes</string>
    <string name="textAssignments_NextClass">Next Class</string>
    <string name="textAssignment_Line3">Is</string>
    <string name="textAssignments_Line4">Tomorrow!</string>
    <string name="buttonAssignmentAdd_AssignmentTime">Due Date</string>
    <string name="textAssignmentAdd_Assignment">Add Assignment</string>
    <string name="textAssignmentAdd_EventTest">Add Test, Meeting, Etc.</string>
    <string name="textAssignmentAdd_Title">Create Entries</string>
    <string name="hintAssignmentAdd_Assignment"> Assignment</string>
    <string name="buttonAssignmentAdd_AddAssignment">Enter Assignment</string>
    <string name="hintAssignmentAdd_EventTitle">Event Title</string>
    <string name="editTextAssignmentAdd_EventPlace">Where?</string>
    <string name="buttonAssignmentAdd_EventTime">Starts..</string>
    <string name="buttonAssignmentAdd_AddEvent">Enter Event</string>
    <string name="textAssignmentAdd_Reminders">Add Reminder</string>
    <string name="editTextAssignmentAdd_Reminder">Remind me..</string>
    <string name="buttonAssignmentAdd_ReminderDate">Date</string>
    <string name="buttonAssignmentAdd_EventDate">Date</string>
    <string name="buttonAssignmentAdd_ReminderAdd">Enter Reminder</string>
    <string name="textScheduleEdit_AddClass">Add Classes</string>
    <string name="editTextScheduleEdit_ClassName">Class Name..</string>
    <string name="textScheduleEdit_OnDays">On Days..</string>
    <string name="textScheduleEdit_Starts">Starts At..</string>
    <string name="textScheduleEdit_Ends">And Ends..</string>
    <string name="checkBoxScheduleEdit_Mon">Mon.</string>
    <string name="checkBoxScheduleEdit_Tues">Tue.</string>
    <string name="checkBoxScheduleEdit_Weds">Weds.</string>
    <string name="checkBoxScheduleEdit_Thur">Thur.</string>
    <string name="checkBoxScheduleEdit_Fri">Fri.</string>
    <string name="checkBoxScheduleEdit_Sat">Sat.</string>
    <string name="checkBoxScheduleEdit_Sun">Sun.</string>
    <string name="buttonScheduleEdit_AddClass">Add This Class</string>
    <string name="scheduleEdit_NoClasses">There are currently no classes! Start Adding!</string>
    <string name="scheduleDatabase_Delete">Delete Class</string>
    <string name="menuAddClass">Add a Class</string>
    <string name="menu_delete">Delete Class</string>
    <string name="toastScheduleEdit_ClassNotSavedTitle">Class Not Saved!</string>
    <string name="toastclass_save_success">Class Saved Successfully!</string>
    <string name="toastScheduleEdit_ClassNotSavedBody">Something went wrong. Please verify all fields were completed</string>
    <string name="textScheduleEdit_Monday">Monday</string>
    <string name="textScheduleView_Tuesday">Tuesday</string>
    <string name="textScheduleView_Wednesday">Wednesday</string>
    <string name="textScheduleView_Thursday">Thursday</string>
    <string name="textScheduleView_Friday">Friday</string>
    <string name="textScheduleView_Saturday">Saturday</string>
    <string name="textScheduleView_Sunday">Sunday</string>
    <string name="checkBoxScheduleItem_PlannerAssistant">Planner Assistant</string>
    <string name="buttonScheduleItem_Delete">Delete</string>
    <string name="textViewScheduleView_Title">Classes Schedule</string>
    <string name="textAssignmentView_PlannerTitle">Planner Views</string>
    <string name="toastAssignmentAdd">Assignment Added Successfully!!</string>
    <string name="toastAssignmentAdd_FailEntryTitle">Entry Failed!</string>
    <string name="toastAssignmentAdd_FailEntryBody">Please Enter a Valid Entry</string>
    <string name="toastAssignmentAdd_AssignmentAdd">Assignment Added!!</string>
    <string name="toastAssignmentAdd_EventAdd">Event Added!!</string>
    <string name="toastAssignmentAdd_ReminderAdd">Reminder Added!!</string>
    <string name="buttonAssignmentView_AssignEvent">Assignments/ Events</string>
    <string name="buttonAssignmentsView_AllEntries">All Entries</string>
    <string name="buttonAssignmentsView_TodayPlanner">All For Today</string>
    <string name="buttonAssignmentsView_UpcomingPlanner">Upcoming</string>
    <string name="buttonAssignmentsView_AssignmentsPlanner">Assignments</string>
    <string name="buttonAssignmentsView_EventPlanner">Events</string>
    <string name="buttonAssignmentsView_PastAssignments">Past Assignments</string>
    <string name="buttonAssignmentsView_ReminderPlanner">Reminders</string>
    <string name="textAssignmentsView_SortBy">Sort By</string>
    <string name="radioAssignmentsView_SortClass">Class</string>
    <string name="radioAssignmentsView_SortDate">Due Date</string>
    <string name="buttonSettings_ClearAll">Clear Everything</string>
    <string name="notificationPlannerAssistant_Title">Planner Assistant</string>
    <string name="notificationPlannerAssistant_Message">What was assigned?</string>
    <string name="buttonPlannerView_Close">Close</string>
    <string name="PlannerViewTitle_Assignments">Assignments</string>
    <string name="dialogEditSchedule_ToLongTitle">Class Title too Long</string>
    <string name="dialogEditSchedule_ToLongBody">All that matters is you know what it means. After a few weeks a long title will just be annoying(Suggested Example: CS 241)</string>
    <string name="textMorningReminder_Title">All Entries for the Day</string>
    <string name="textMorningReminder_Motivation">\"Let Today Be Great\"</string>
    <string name="textMorningReminder_Assignments">Assignments</string>
    <string name="textMorningReminder_Events">Events</string>
    <string name="textMorningReminder_Reminders">Reminders</string>
    <string name="buttonMorningReminders_ToSchedule">View Schedule</string>
    <string name="textSettings_Title">Settings</string>
    <string name="textNightReminder_Title">All Upcoming Entries</string>
    <string name="textNightReminder_TomorrowHeader">Tomorrow</string>
    <string name="textNightReminder_DayAfter">Two Days From Now</string>
    <string name="textNightReminder_AndAfterHeader">Three Days From Now</string>
    <string name="OnCreateBody">Hello and welcome to the College Study Buddy. This is a planner which will remind you to use it for select classes (by turning the Planner Assistant on) and help you stay on top of your assignments and due dates. My name is Pete and I am just another college student who has troubles keeping a planner. I created it because there are plenty of other things which I would rather think about and focus my energy on then what is due and coming up for classes. Just let this application do that! The College Study Buddy can only be used if a Schedule is built, so get started by clicking the button below!</string>
    <string name="OnCreateTitle">Welcome To The College Study Buddy!</string>
    <string name="noClasses_Line1">No Classes</string>
    <string name="textSettings_ClearTitle">Delete Items/ Clear Data</string>
    <string name="buttonSettings_ClearPlanner">Delete All Planner Entries</string>
    <string name="buttonSettings_ClearSchedule">Clear Schedule</string>
    <string name="checkBoxSettings_Notifications">Notifications Enabled</string>
    <string name="textViewSettings_NotificationOn">Notifications will only be sent if this is selected</string>
    <string name="checkBoxSettings_PlannerAssistant">Planner Assistant Enabled</string>
    <string name="textSettings_PlannerAssistant">Planner Assistant will only send if this is selected</string>
    <string name="checkBoxSettings_Morning">Morning Notifications Enabled</string>
    <string name="textSettings_Morning">Send Notification in morning when there are entries for the day</string>
    <string name="checkBoxSettings_Nightly">Nightly Notifications Enabled</string>
    <string name="textSettings_Nightly">Send Notifications in the evening when there are entries coming up</string>
    <string name="textSettings_NotificationTitle">Notification Settings</string>
    <string name="textDeleteClasses_Title">Delete Individual Classes</string>
    <string name="DeleteClasses_Delete">Delete Classes</string>
    <string name="basicUse">Thank you for choosing the College Study Buddy, I hope that you will make good use of it. This is a basic overview of the operations and how to get the most out of this application considering it can be a very useful tool when used properly. HOW TO USE IT: you must start by building your schedule. Make sure all entries and put in correctly or you will get some very strange results, the time-selecter will be shown in AM/PM format but the text on the Add-A-Class page will be shown in 24-hour format so you can confirm that everything seems spaced out correctly. You can add and delete classes at any time. From there, you will go to the Schedule View page. This is where you can customize which classes you would like a notification reminding you to add entries to your planner after. This notification will be sent at the time you specified as when your class ends and selecting the notification from your notifications bar will bring you to the assignment entry view. Again, it is important to fill out all fields correctly to get the most out of this application. In this view, you will have the option to add Assignments, Events (such as tests or meetings) and reminders. Select the correct class from the selection menu, add your personal entry and then set the due date or date which corresponds to your entry. There is no limit to how many entries you can add, so put as few or as many as you would like. The Most important view is the Main Menu or Assignments View. This view has a list of buttons so you can view specific entries put in order of either class or due date. View them as often or not as you would like. Finally, the settings view. Here you can delete large chunks of the application and decide which notifications, if any, you would like turned on. For weeks off and vacations, it is very easy to simply disable notifications and the College Study Buddy wont bug you. Keep in mind, though, if either the Notifications Enabled or Planner Assistant Enabled check boxes are not selected, the check boxes in the schedule view will not be checkable. Well thank you again for trusting the College Study Buddy to help your journey through the most stressful time of your life and I hope  you find it useful. If there is anything you wish was added to it, feel free to post it on the applications Facebook page and I will do my best to make it happen.</string>
    <string name="buttonSettings_DeleteSelectClasses">Delete Select Classes</string>
    <string name="scheduleView_DeleteItems">Delete Classes</string>
    <string name="buttonScheduleView_DeleteSelect">Delete Classes</string>
    <string name="buttonAssignmentView_Settings">Planner Views</string>
    <string name="textPlannerSettingsClass">Select Class</string>
    <string name="textPlannerSettingsTypes">Display Types</string>
    <string name="Assignments">Assignments</string>
    <string name="Events">Events</string>
    <string name="Reminders">Reminders</string>
    <string name="textPlanSettings_Time">Display Dates</string>
    <string name="Upcoming">Upcoming</string>
    <string name="Past">Past</string>
</resources>