<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textPlannerSettingsClass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/textPlannerSettingsClass"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerPlanSettings_Classes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textPlannerSettingsTypes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/textPlannerSettingsTypes"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/checkBoxPlanSettings_Assignments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Assignments" />

        <CheckBox
            android:id="@+id/checkBoxPlanSettings_Events"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Events" />

        <CheckBox
            android:id="@+id/checkBoxPlanSettings_Reminders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Reminders" />

        <TextView
            android:id="@+id/textPlanAssignments_Time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/textPlanSettings_Time"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radioPlanSettings_Upcoming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/Upcoming" />

            <RadioButton
                android:id="@+id/radioPlanSettings_Past"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Past" />
        </RadioGroup>
    </LinearLayout>

</ScrollView>